--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "beautiful":"prettier --single-quote --trailing-comma all --tab-width 4 --write src/**/*.{js,json,scss} ",
     "start": "nodemon --inspect src/index.js",
-    "watch":"node-sass --watch src/resources/scss -o src/public/css",
+    "watch": "node-sass --watch src/resources/scss -o src/public/css",
     "test": "echo \"Error: no test specified\" && exit 1"
-    
   },
   "repository": {
     "type": "git",
@@ -28,8 +28,11 @@
     "express-handlebars": "^5.2.0"
   },
   "devDependencies": {
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.1",
     "morgan": "^1.10.0",
     "node-sass": "^4.14.1",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "prettier": "^2.1.2"
   }
 }
